--- a/CSS-1/index.html
+++ b/CSS-1/index.html
@@ -35,6 +35,34 @@
 
     <button class="btn" id="btn-1">Submit</button>
     <button class="btn" id="btn-2">Reset</button>
+
+    <div class="head">
+        <h1>This is heading</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas labore esse, et nemo voluptate dicta
+            doloribus at eos vel tempora repellat, aliquam incidunt impedit dolore maxime exercitationem, voluptatibus
+            consequatur eaque?</p>
+    </div>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas labore esse, et nemo voluptate dicta
+        doloribus at eos vel tempora repellat, aliquam incidunt impedit dolore maxime exercitationem, voluptatibus
+        consequatur eaque?</p>
+
+
+    <p id="ps-demo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum iste dignissimos vitae at nesciunt
+        qui hic
+        obcaecati. Nulla, hic, dolores eius id odio, molestias deleniti natus qui ut repellendus temporibus.</p>
+
+    <table border="1">
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+
+    <input type="text">
+
 </body>
 
 </html>
